revision 46 - 20100725                                      |
libspeedtest:                                               |
  * Detect and print ISP network in the reports             |


revision 45 - 20100725                                      |
libspeedtest:                                               |
  * Minor changes in report layout                          |


revision 44 - 20100724                                      |
libspeedtest:                                               |
  * Improved max scaling algorithm for the download charts  |
  * Updated embedded resources' hostlist to 201007220909    |
                                                            |
QSpeedTest:                                                 |
  * Prevent exiting the application via Window Manager's    |
    "X" button or the File > Exit menuitem when a test is   |
    still in progress                                       |


revision 43 - 20100723                                      |
QSpeedTestCLI:                                              |
  * IT'S BACK!                                              |
                                                            |
libspeedtest:                                               |
  * Fixed a bug that caused ugly X-axis result in Google    |
    Charts for download groups with speeds exceeding the    |
    ADSL2+ threshold                                        |
  * Fixed a bug that caused a problem in the X-axis scaling |
    in Google Charts for download groups                    |
  * Fixed a bug that caused an extraneous empty column in   |
    the bbCode output, when posted                          |
                                                            |
QSpeedTest:                                                 |
  * Enabled horizontal scroll bar in the QPlainTextEdit     |
    widget of the results + a work-around to deal with the  |
    cancellation of the autoscrolling when the horizontal   |